--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "heroku-postbuild": "npm run build",
     "precommit": "eslint src",
     "prod": "NODE_ENV=production node server.js"
-
   },
   "repository": {
     "type": "git",
@@ -54,6 +53,7 @@
     "copy-webpack-plugin": "^4.5.2",
     "cross-env": "^5.2.0",
     "css-loader": "^1.0.0",
+    "dotenv": "^8.2.0",
     "draft-js": "^0.11.5",
     "draftjs-to-html": "^0.9.1",
     "dropzone": "^5.7.0",
@@ -69,6 +69,7 @@
     "html-webpack-plugin": "^3.2.0",
     "moment": "2.24.0",
     "node-sass": "^4.9.2",
+    "nodemailer": "^6.4.8",
     "postcss-loader": "^2.1.6",
     "react": "^16.8.0",
     "react-dom": "^16.8.0",
